monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4096/A4096b.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4096;

grammar A4096b {

  A4096bNode = "bar";

}